--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,18 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.modal {
+  background-color: wheat;
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
