--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,38 @@
   color: white;
 }
 
-.modal {
-  background-color: wheat;
-  width: 500px;
-  height: 500px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
+.menuBtn {
+  position: fixed;
+  left:  20px;
+  top: 20px;
+  border: none;
+  background-color: inherit;
+  font-size: 20px;
+  color:aqua;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.menuBtn:hover {
+  scale: 1.1;
+}
+
+.list {
+  position: fixed;
+  top: 50px;
+  left: 30px;
+  text-align: start;
+  padding: 0;
+}
+
+.item {
+  padding: 5px 0;
+  margin: 5px 0;
+  cursor: pointer;
+}
+
+.item:hover {
+  scale: 1.1;
 }
