--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,73 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+
+.menuBtn {
+  position: fixed;
+  left:  20px;
+  top: 20px;
+  border: none;
+  background-color: inherit;
+  font-size: 20px;
+  color:aqua;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.menuBtn:hover {
+  scale: 1.1;
+}
+
+.list {
+  position: fixed;
+  top: 50px;
+  left: 30px;
+  text-align: start;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.item {
+  padding: 5px 0;
+  margin: 5px 0;
+  cursor: pointer;
+  color: white;
+}
+
+.item:hover {
+  scale: 1.1;
+}
+
+.container {
+  position: relative;
+}
+
+.page {
+  position: absolute;
+  left: 15px;
+  right: 15px;
+}
+
+.page-enter {
+  opacity: 0;
+  transform: scale(1.1);
+}
+
+.page-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 300ms, transform 300ms;
+}
+
+.page-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.page-exit-active {
+  opacity: 0;
+  transform: scale(0.9);
+  transition: opacity 300ms, transform 300ms;
+}
